# Synoptia-THERESE-Server

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  TODO.md  docker-compose.yml  openclaw-bridge.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20682614d0d1_add_email_priority_fields.py  21b429e036ef_initial_schema.py  977c5c3cff46_phase_5_crm_add_stage_score_source_last_.py  a1b2c3d4e5f6_add_rgpd_fields_to_contacts.py  b2c3d4e5f6a7_local_first_imap_caldav_fields.py  c3d4e5f6a7b8_ajout_devis_adresse_contacts_tva_auto.py  d4e5f6a7b8c9_add_currency_field_to_invoices.py  ea76e4e8871d_add_email_category_field.py
backend/app/: __init__.py  config.py  main.py  rate_limit.py
backend/app/auth/: backend.py  models.py  rbac.py  router.py  seed.py  tenant.py
backend/app/core/: __init__.py
backend/app/models/: __init__.py  board.py  command.py  database.py  entities.py  entities_agents.py  entities_missions.py  schemas.py  schemas_agents.py  schemas_calculators.py  schemas_calendar.py  schemas_commands.py  schemas_email.py  schemas_escalation.py  schemas_images.py  schemas_mcp.py  schemas_missions.py  schemas_personalisation.py  schemas_skills.py  schemas_voice.py
backend/app/routers/: __init__.py  admin.py  agents.py  board.py  browser.py  calculators.py  calendar.py  chat.py  chat_llm.py  commands.py  commands_v3.py  config.py  crm.py  data.py  email.py  email_setup.py  escalation.py  files.py  images.py  invoices.py  mcp.py  memory.py  missions.py  performance.py  personalisation.py  rgpd.py  search.py  skills.py  tasks.py  templates.py  tools.py  voice.py
backend/app/services/: __init__.py  audit.py  board.py  browser_agent.py  calculators.py  calendar_service.py  command_registry.py  context.py  crm_export.py  crm_import.py  crm_service.py  crm_sync.py  crm_utils.py  deep_research.py  email_classifier.py  email_classifier_v2.py  email_response_generator.py  email_service.py  email_setup_assistant.py  embeddings.py  encryption.py  entity_extractor.py  error_handler.py  file_parser.py  gmail_service.py  http_client.py  image_generator.py  invoice_pdf.py  llm.py  mcp_service.py  memory_tools.py  oauth.py  path_security.py  performance.py  prompt_security.py  (+9 more)
backend/tests/: conftest.py  test_agents.py  test_backup.py  test_command_registry.py  test_error_handling.py  test_escalation.py  test_performance.py  test_personalisation.py  test_server_api.py  test_services_security.py
(+116 files in other folders)
