[project]
name = "therese-server"
version = "0.4.1"
description = "Thérèse Server - Assistant IA multi-utilisateurs pour collectivités et PME"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
    { name = "Ludo Sanchez", email = "ludo@synoptia.fr" }
]
keywords = ["ai", "assistant", "server", "multi-user", "rag", "llm"]

dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0",
    # PostgreSQL (prod)
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # SQLite (dev)
    "aiosqlite>=0.20.0",
    # Auth
    # LLM providers
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-genai>=1.0.0",
    # RAG
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "einops>=0.8.1",
    # Office skills
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",
    "reportlab>=4.2.5",
    # Files
    "pypdf>=4.0.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    # Email
    "beautifulsoup4>=4.12.3",
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.142.0",
    "imap-tools>=1.6.0",
    "aiosmtplib>=3.0.0",
    # Calendar
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
    "pytz>=2024.1",
    # Security
    "cryptography>=46.0.3",
    "slowapi>=0.1.9",
    # Auth
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Logging
    "python-json-logger>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "SIM"]
ignore = [
    "E501",
    "B008",
    "B904",
    "C901",
    "SIM105",
    "SIM108",
    "SIM102",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
